--- a/django_app2/board/templates/boardList.html
+++ b/django_app2/board/templates/boardList.html
@@ -41,7 +41,7 @@
                     <tr>
                         <td>{{ board.id }}</td>
                         <th><a href="detail/{{ board.id }}">{{ board.subject }}</a></th>
-                        <td>{{  oard.viewCount }}</td>
+                        <td>{{  board.viewCount }}</td>
                     </tr>
                     {% endfor %}
                     </tbody>
